--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="ex-container">
             <div class="ex-card">
                 <div class="ex-avatar">
-                    <img src="/Assets/avatar chibi.jpg" alt="avatar">
+                    <img src="./Assets/avatar chibi.jpg" alt="avatar">
                 </div>
                 <div class="ex-description">
                     <h2>Email List</h2>
@@ -59,7 +59,7 @@
             </div>
             <div class="ex-card">
                 <div class="ex-avatar">
-                    <img src="/Assets/avatar chibi.jpg" alt="avatar">
+                    <img src="./Assets/avatar chibi.jpg" alt="avatar">
                 </div>
                 <div class="ex-description">
                     <h2>Murach Suvey</h2>
@@ -68,7 +68,7 @@
             </div>
             <div class="ex-card">
                 <div class="ex-avatar">
-                    <img src="/Assets/avatar chibi.jpg" alt="avatar">
+                    <img src="./Assets/avatar chibi.jpg" alt="avatar">
                 </div>
                 <div class="ex-description">
                     <h2>Exercise</h2>
@@ -77,7 +77,7 @@
             </div>
             <div class="ex-card">
                 <div class="ex-avatar">
-                    <img src="/Assets/avatar chibi.jpg" alt="avatar">
+                    <img src="./Assets/avatar chibi.jpg" alt="avatar">
                 </div>
                 <div class="ex-description">
                     <h2>Exercise</h2>
