--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </div>
                 <div class="ex-description">
                     <h2>Exercise</h2>
-                    <a href="#" target="_blank">Deploy<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="https://baostar.azurewebsites.net/EmailListServletModification" target="_blank">Deploy<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="ex-card">
@@ -81,7 +81,7 @@
                 </div>
                 <div class="ex-description">
                     <h2>Exercise</h2>
-                    <a href="#" target="_blank">Deploy<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="https://baostar.azurewebsites.net/ServletCreation/" target="_blank">Deploy<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
         </div>
