--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <img src="./Assets/avatar chibi.jpg" alt="avatar">
                 </div>
                 <div class="ex-description">
-                    <h2>Exercise</h2>
+                    <h2>Exercise 5-1</h2>
                     <a href="https://baostar.azurewebsites.net/EmailListServletModification" target="_blank">Deploy<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
@@ -80,7 +80,7 @@
                     <img src="./Assets/avatar chibi.jpg" alt="avatar">
                 </div>
                 <div class="ex-description">
-                    <h2>Exercise</h2>
+                    <h2>Exercise 5-2</h2>
                     <a href="https://baostar.azurewebsites.net/ServletCreation/" target="_blank">Deploy<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
