--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <ul>
                 <a href="#home">Home</a>
                 <a href="#exercises">Exercises</a>
+                <a href="#contact">Contact</a>
             </ul>
         </div>
     </header>
@@ -84,18 +85,54 @@
                     <a href="https://baostar.azurewebsites.net/ServletCreation/" target="_blank">Deploy<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
+            <div class="ex-card">
+                <div class="ex-avatar">
+                    <img src="./Assets/avatar chibi.jpg" alt="avatar">
+                </div>
+                <div class="ex-description">
+                    <h2>Exercise</h2>
+                    <a href="#" target="_blank">Deploy<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
+            <div class="ex-card">
+                <div class="ex-avatar">
+                    <img src="./Assets/avatar chibi.jpg" alt="avatar">
+                </div>
+                <div class="ex-description">
+                    <h2>Exercise</h2>
+                    <a href="#" target="_blank">Deploy<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
+            <div class="ex-card">
+                <div class="ex-avatar">
+                    <img src="./Assets/avatar chibi.jpg" alt="avatar">
+                </div>
+                <div class="ex-description">
+                    <h2>Exercise</h2>
+                    <a href="#" target="_blank">Deploy<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
+            <div class="ex-card">
+                <div class="ex-avatar">
+                    <img src="./Assets/avatar chibi.jpg" alt="avatar">
+                </div>
+                <div class="ex-description">
+                    <h2>Exercise</h2>
+                    <a href="#" target="_blank">Deploy<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
         </div>
       </div>
      <!-- end Exercises -->
 
       <!-- Contact -->
-       <div class="contact">
+       <div class="contact" id="contact">
         <h1>Contact for work</h1>
         <div class="contact-links">
-            <a href="#"><i class="fa-brands fa-facebook"></i></a>
-            <a href="#"><i class="fa-solid fa-envelope"></i></a>
-            <a href="#"><i class="fa-solid fa-phone"></i></a>
-            <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+            <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+            <a href="#" target="_blank"><i class="fa-solid fa-phone"></i></a>
+            <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-square-instagram"></i></a>
         </div>
        </div>
       <!-- end Contact -->
