--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <a href="https://baostar.azurewebsites.net/ServletCreation/" target="_blank">Deploy<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
-            <div class="ex-card">
+            <!-- <div class="ex-card">
                 <div class="ex-avatar">
                     <img src="./Assets/avatar chibi.jpg" alt="avatar">
                 </div>
@@ -120,13 +120,13 @@
                     <h2>Exercise</h2>
                     <a href="#" target="_blank">Deploy<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
-            </div>
+            </div> -->
         </div>
       </div>
      <!-- end Exercises -->
 
       <!-- Contact -->
-       <div class="contact" id="contact">
+       <footer class="contact" id="contact">
         <h1>Contact for work</h1>
         <div class="contact-links">
             <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
@@ -134,8 +134,17 @@
             <a href="#" target="_blank"><i class="fa-solid fa-phone"></i></a>
             <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-square-instagram"></i></a>
         </div>
-       </div>
+       </footer>
       <!-- end Contact -->
+       
+      <!-- Copyright -->
+       <div class="copyright">
+        <h2>Copyright &copy All rights belong</h2>
+        <div class="copyright-avt">
+            <img src="./Assets/main_logo.png" alt="logo">
+        </div>
+       </div>
+      <!-- end Copyright -->
 
      <script src="script.js"></script>
 </body>
