--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h2>Looking for something <span>interesting</span>?<br> Come to the right place</h2>
             <p>Welcome to my exercise repository. I'm BaoStar. If you're looking for my class exercises, check out the below!</p>
             <div class="scroll-down-arrow">
-                <a href="#exercises">Check it out</a>
+                <a href="#exercises">Check it out<i style="margin-left: 1rem;" class="fa-solid fa-circle-chevron-down"></i></a>
             </div>
         </div>
         <div class="home-avatar">
