--- a/index.html
+++ b/index.html
@@ -85,15 +85,6 @@
                     <a href="https://baostar.azurewebsites.net/ServletCreation/" target="_blank">Deploy<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
-            <!-- <div class="ex-card">
-                <div class="ex-avatar">
-                    <img src="./Assets/avatar chibi.jpg" alt="avatar">
-                </div>
-                <div class="ex-description">
-                    <h2>Exercise</h2>
-                    <a href="#" target="_blank">Deploy<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                </div>
-            </div>
             <div class="ex-card">
                 <div class="ex-avatar">
                     <img src="./Assets/avatar chibi.jpg" alt="avatar">
@@ -120,7 +111,16 @@
                     <h2>Exercise</h2>
                     <a href="#" target="_blank">Deploy<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
-            </div> -->
+            </div>
+            <div class="ex-card">
+                <div class="ex-avatar">
+                    <img src="./Assets/avatar chibi.jpg" alt="avatar">
+                </div>
+                <div class="ex-description">
+                    <h2>Exercise</h2>
+                    <a href="#" target="_blank">Deploy<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
         </div>
       </div>
      <!-- end Exercises -->
