--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <img src="./Assets/avatar chibi.jpg" alt="avatar">
                 </div>
                 <div class="ex-description">
-                    <h2>Murach Suvey</h2>
+                    <h2>Murach Survey</h2>
                     <a href="https://baostar.azurewebsites.net/MurachSurvey" target="_blank">Deploy<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
@@ -90,8 +90,8 @@
                     <img src="./Assets/avatar chibi.jpg" alt="avatar">
                 </div>
                 <div class="ex-description">
-                    <h2>Exercise</h2>
-                    <a href="#" target="_blank">Deploy<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <h2>Exercise 6-1</h2>
+                    <a href="https://baostar.azurewebsites.net/EmailListJspModification/" target="_blank">Deploy<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="ex-card">
@@ -99,8 +99,8 @@
                     <img src="./Assets/avatar chibi.jpg" alt="avatar">
                 </div>
                 <div class="ex-description">
-                    <h2>Exercise</h2>
-                    <a href="#" target="_blank">Deploy<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <h2>Exercise 6-2</h2>
+                    <a href="https://baostar.azurewebsites.net/JSPCreation/" target="_blank">Deploy<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="ex-card">
@@ -108,8 +108,8 @@
                     <img src="./Assets/avatar chibi.jpg" alt="avatar">
                 </div>
                 <div class="ex-description">
-                    <h2>Exercise</h2>
-                    <a href="#" target="_blank">Deploy<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <h2>Exercise 8</h2>
+                    <a href="https://baostar.azurewebsites.net/EmailListAppModification/" target="_blank">Deploy<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="ex-card">
@@ -117,8 +117,17 @@
                     <img src="./Assets/avatar chibi.jpg" alt="avatar">
                 </div>
                 <div class="ex-description">
-                    <h2>Exercise</h2>
-                    <a href="#" target="_blank">Deploy<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <h2>Exercise 9-1</h2>
+                    <a href="https://baostar.azurewebsites.net/JSTLUse/" target="_blank">Deploy<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
+            <div class="ex-card">
+                <div class="ex-avatar">
+                    <img src="./Assets/avatar chibi.jpg" alt="avatar">
+                </div>
+                <div class="ex-description">
+                    <h2>Exercise 9-2</h2>
+                    <a href="https://baostar.azurewebsites.net/JSTLCartApp/" target="_blank">Deploy<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
         </div>
