--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 </div>
                 <div class="ex-description">
                     <h2>Java Persistence API</h2>
-                    <a href="https://baostar.azurewebsites.net/JavaPersistenceAPI/" target="_blank">Deploy<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="https://baostar.azurewebsites.net/JavePersistenceAPI/" target="_blank">Deploy<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
         </div>
