--- a/index.html
+++ b/index.html
@@ -157,6 +157,15 @@
                     <a href="https://baostar.azurewebsites.net/JavePersistenceAPI/" target="_blank">Deploy<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
+            <div class="ex-card">
+                <div class="ex-avatar">
+                    <img src="./Assets/avatar chibi.jpg" alt="avatar">
+                </div>
+                <div class="ex-description">
+                    <h2>Java Mail</h2>
+                    <a href="https://baostar.azurewebsites.net/JSPEmail/" target="_blank">Deploy<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
         </div>
       </div>
      <!-- end Exercises -->
