--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         <div class="home-avatar">
             <div class="avatar">
-                <img src="./Assets/avatar chibi.jpg" alt="avatar">
+                <img src="./Assets/deptrai.jpg" alt="avatar">
             </div>
         </div>
       </div>
